fix: Adjusted collapse icon styles

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -138,8 +138,8 @@
   @media (min-width: breakpoint.$desktop) {
     display: flex;
   }
-}
 
-.collapseArrowItem:last-of-type {
-  transform: rotate(180deg);
+  &.isCollapsed {
+    transform: rotate(180deg);
+  }
 }
